@@ -13516,49 +13516,68 @@ void Client::Handle_OP_TraderShop(const EQApplicationPacket *app)
 
 	if (app->size == sizeof(TraderClick_Struct))
 	{
-		// This is when a potential purchaser right clicks on this client who is in Trader mode to
-		// browse their goods.
+		
 		TraderClick_Struct* tcs = (TraderClick_Struct*)app->pBuffer;
 
-		EQApplicationPacket* outapp = new EQApplicationPacket(OP_TraderShop, sizeof(TraderClick_Struct));
+		Log.Out(Logs::Detail, Logs::Trading, "Handle_OP_TraderShop: TraderClick_Struct TraderID %d, Code %d, Unknown008 %d, Approval %d",
+			tcs->TraderID, tcs->Code, tcs->Unknown008, tcs->Approval);
 
-		TraderClick_Struct* outtcs = (TraderClick_Struct*)outapp->pBuffer;
-
-		Client* Trader = entity_list.GetClientByID(tcs->TraderID);
-
-		if (Trader)
+		if (tcs->Code == BazaarWelcome)
 		{
-			outtcs->Approval = Trader->WithCustomer(GetID());
-			Log.Out(Logs::Detail, Logs::Trading, "Client::Handle_OP_TraderShop: Shop Request (%s) to (%s) with Approval: %d", GetCleanName(), Trader->GetCleanName(), outtcs->Approval);
-		}
-		else {
-			Log.Out(Logs::Detail, Logs::Trading, "Client::Handle_OP_TraderShop: entity_list.GetClientByID(tcs->traderid)"
-				" returned a nullptr pointer");
-			return;
-		}
-
-		outtcs->TraderID = tcs->TraderID;
-
-		outtcs->Unknown008 = 0x3f800000;
-
-		QueuePacket(outapp);
-
-
-		if (outtcs->Approval) {
-			this->BulkSendTraderInventory(Trader->CharacterID());
-			Trader->Trader_CustomerBrowsing(this);
-			TraderID = tcs->TraderID;
-			Log.Out(Logs::Detail, Logs::Trading, "Client::Handle_OP_TraderShop: Trader Inventory Sent");
+			Log.Out(Logs::Detail, Logs::Trading, "Client::Handle_OP_TraderShop: Sent Bazaar Welcome Info");
+			SendBazaarWelcome();
 		}
 		else
 		{
-			Message_StringID(clientMessageYellow, TRADER_BUSY);
-			Log.Out(Logs::Detail, Logs::Trading, "Client::Handle_OP_TraderShop: Trader Busy");
+			// This is when a potential purchaser right clicks on this client who is in Trader mode to
+			// browse their goods.
+			EQApplicationPacket* outapp = new EQApplicationPacket(OP_TraderShop, sizeof(TraderClick_Struct));
+
+			TraderClick_Struct* outtcs = (TraderClick_Struct*)outapp->pBuffer;
+
+			Client* Trader = entity_list.GetClientByID(tcs->TraderID);
+
+			if (Trader)
+			{
+				outtcs->Approval = Trader->WithCustomer(GetID());
+				Log.Out(Logs::Detail, Logs::Trading, "Client::Handle_OP_TraderShop: Shop Request (%s) to (%s) with Approval: %d", GetCleanName(), Trader->GetCleanName(), outtcs->Approval);
+			}
+			else {
+				Log.Out(Logs::Detail, Logs::Trading, "Client::Handle_OP_TraderShop: entity_list.GetClientByID(tcs->traderid)"
+					" returned a nullptr pointer");
+				return;
+			}
+
+			outtcs->TraderID = tcs->TraderID;
+
+			outtcs->Unknown008 = 0x3f800000;
+
+			QueuePacket(outapp);
+
+
+			if (outtcs->Approval) {
+				this->BulkSendTraderInventory(Trader->CharacterID());
+				Trader->Trader_CustomerBrowsing(this);
+				TraderID = tcs->TraderID;
+				Log.Out(Logs::Detail, Logs::Trading, "Client::Handle_OP_TraderShop: Trader Inventory Sent");
+			}
+			else
+			{
+				Message_StringID(clientMessageYellow, TRADER_BUSY);
+				Log.Out(Logs::Detail, Logs::Trading, "Client::Handle_OP_TraderShop: Trader Busy");
+			}
+
+			safe_delete(outapp);
+			return;
 		}
 
-		safe_delete(outapp);
-
-		return;
+	}
+	else if (app->size == sizeof(BazaarWelcome_Struct))
+	{
+		// RoF+
+		// Client requested Bazaar Welcome Info (Trader and Item Total Counts)
+		SendBazaarWelcome();
+		Log.Out(Logs::Detail, Logs::Trading, "Client::Handle_OP_TraderShop: Sent Bazaar Welcome Info");
 	}
 	else if (app->size == sizeof(TraderBuy_Struct))
 	{
